@@ -580,7 +580,7 @@ public interface StorageServiceMBean extends NotificationEmitter
      * @param tokens Range of tokens to rebuild or null to rebuild all token ranges. In the format of:
      *               "(start_token_1,end_token_1],(start_token_2,end_token_2],...(start_token_n,end_token_n]"
      */
-    public void rebuild(String sourceDc, String keyspace, String tokens);
+    public void rebuild(String sourceDc, String keyspace, String tokens, String specificSources);
 
     /** Starts a bulk load and blocks until it completes. */
     public void bulkLoad(String directory);
