@@ -41,6 +41,11 @@ public class Rebuild extends NodeToolCmd
             description = "Use -ts to rebuild specific token ranges, in the format of \"(start_token_1,end_token_1],(start_token_2,end_token_2],...(start_token_n,end_token_n]\".")
     private String tokens = null;
 
+    @Option(title = "specific_sources",
+            name = {"-s", "--sources"},
+            description = "Use -s to specify hosts that this node should stream from when -ts is used. Multiple hosts should be separated using commas (e.g. 127.0.0.1,127.0.0.2,...)")
+    private String specificSources = null;
+
     @Override
     public void execute(NodeProbe probe)
     {
@@ -50,6 +55,6 @@ public class Rebuild extends NodeToolCmd
             throw new IllegalArgumentException("Cannot specify tokens without keyspace.");
         }
 
-        probe.rebuild(sourceDataCenterName, keyspace, tokens);
+        probe.rebuild(sourceDataCenterName, keyspace, tokens, specificSources);
     }
 }
